--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,8 +1,8 @@
 
-<div class="navigation">
+<div class=" row navigation">
     <ul>
         <ng-container *ngFor="let nav of navs">
-            <li class="list" [class.active] ="selectedNav === nav.label">
+            <li class="list" (click) ="changeBottomNav(nav)" [class.active] ="selectedNav === nav.label">
                 <a href="#">
                     <span class="icon ion-android-home" [ngClass]="nav.icon"></span>
                     <span class="text">{{nav.label}}</span>
