--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -2,8 +2,8 @@
 <div class=" row navigation">
     <ul>
         <ng-container *ngFor="let nav of navs">
-            <li class="list" (click) ="changeBottomNav(nav)" [class.active] ="selectedNav === nav.label">
-                <a href="#">
+            <li class="list" [class.active] ="selectedNav === nav.label">
+                <a href="javascript: void(0);"  (click) ="changeBottomNav(nav)" >
                     <span class="icon ion-android-home" [ngClass]="nav.icon"></span>
                     <span class="text">{{nav.label}}</span>
                 </a>
