--- a/src/app/component/card-task/card-task.component.css
+++ b/src/app/component/card-task/card-task.component.css
@@ -19,11 +19,12 @@
   }
   
   .card-text.sub-text-color {
+    margin-bottom: unset;
     color: #8c8c8c;
   }
   
   .card-text:last-child {
-    font-size: 30px;
+    font-family: 'Font Awesome 5 Free';
     color: #595959;
   }
   
