--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -101,7 +101,7 @@
   
   header .overlay {
     width: 100%;
-    height: 100%;
+    height: 100px;
     padding: 50px;
     color: #FFF;
     text-shadow: 1px 1px 1px #333;
