--- a/src/app/pages/user/main/main.component.html
+++ b/src/app/pages/user/main/main.component.html
@@ -1,3 +1,3 @@
-<app-header [title]="'NGAI e.'"></app-header>
+<app-header [title]="'NGAI Elizabeth A.'"></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
