--- a/src/app/pages/user/campaigns/campaigns.component.html
+++ b/src/app/pages/user/campaigns/campaigns.component.html
@@ -1,1 +1,14 @@
-<p>campaigns works!</p>
+<div class="col-md-4 list-drink">
+    <div class="list-drink-header d-flex"><i class="fa fa-star"></i>
+        <h3 class="mb-4">Ongoing Campaigns</h3>
+    </div>
+    <ul class="list-unstyled">
+        <li class="media mb-4" *ngFor="let campaign of campaignList"><a class="d-flex" href="#">
+                <div class="media-thumb mr-3" [style.background-image]="'url(/assets/img/' + campaign.img + ')'" ></div>
+                <div class="media-body align-self-center">
+                    <h6>{{campaign.name}}</h6>
+                    <p>{{campaign.desc}}<br><br></p>
+                </div>
+            </a></li><hr>
+    </ul>
+</div>
