--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,9 @@
     <div class="container"><a class="navbar-brand logo" href="#">CypherFund</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="cv.html">Services</a></li>
+                <li class="nav-item"><a class="nav-link active" [routerLink]="['/home']">Home</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/about']">About</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['/services']">Services</a></li>
                 <li class="nav-item"><button class="btn btn-primary" (click)="signin()">Sign in</button></li>
             </ul>
         </div>
