--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<section class="login-clean">
+    <div class="form-group mb-3 text-danger" *ngIf="f.submitted && errorMessage !== ''">{{errorMessage}}</div>
+    <form method="post" name="form" (ngSubmit)="login(f)" #f="ngForm" novalidate>
+        <h2 class="visually-hidden">Login Form</h2>
+        <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
+        <div class="form-group mb-3">
+            <input 
+            class="form-control" 
+            ngModel
+            required
+            type="text" 
+            name="username" 
+            placeholder="Username">
+        </div>
+        <div class="form-group mb-3">
+            <input 
+            class="form-control" 
+            ngModel
+            required
+            type="password" 
+            name="password" 
+            placeholder="Password">
+        </div>
+        <div class="form-group mb-3">
+            <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Login with phone</label></div>
+        </div>
+        <div class="form-group mb-3"><button class="btn btn-primary d-block w-100" type="submit">Log In</button></div><a class="forgot" href="#">Forgot your email or password?</a>
+    </form>
+</section>
