add cart button

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,6 +1,17 @@
 <header class="overlay">
     <div class="overlay" style=""><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" style="width: 15%;">
         <p style="margin-bottom: unset;">{{title}}</p>
-        <div><span>{{coins}}</span><img src="assets/img/—Pngtree—illustration%20gold%20coin_6667613.png" style="width: 30px;"></div>
+        <div *ngIf="navService.showCoins">
+            <span>{{coins}}</span>
+            <img src="assets/img/—Pngtree—illustration%20gold%20coin_6667613.png" style="width: 30px;">
+        </div>
+        <div *ngIf="navService.showCart">
+        <button class="btn btn-primary cart-button" type="button" >
+            <i class="fas fa-shopping-cart" style="font-size: 2em;margin-right: .4rem;">
+            </i>
+            <span class="text-uppercase"></span>
+        </button>
+        <span class="counter">22</span>
+        </div>
     </div>
 </header>
