--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,5 +1,5 @@
 
-  input, button, button:focus {
+  button, button:focus {
     outline: 0;
   }
   
@@ -12,81 +12,13 @@
     -moz-transition-duration: .2s;
     -webkit-transition-duration: .2s;
     -o-transition-duration: .2s;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    margin: 0;
     padding: 0;
-    color: #000;
-  }
-
-  * {
+    margin: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
-  
-  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-  }
-  
-  .h1, .h2, .h3, h1, h2, h3 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-  
-  
-  * {
-    transition-timing-function: ease-in-out;
-    -moz-transition-timing-function: ease-in-out;
-    -webkit-transition-timing-function: ease-in-out;
-    /*-o-transition-timing-function: ease-in-out;*/
-    transition-duration: .2s;
-    -moz-transition-duration: .2s;
-    -webkit-transition-duration: .2s;
-    -o-transition-duration: .2s;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
-    color: #000;
-  }
-  
-  * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  button, input, select, textarea {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-  }
-  
-  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-  }
-  
-  .h1, .h2, .h3, h1, h2, h3 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
 
-  
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
   header {
     /* background: url('../../assets/img/loft.jpg'); */
     text-align: center;
@@ -111,136 +43,41 @@
     align-items: center;
   }
   
-  h1 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 80px;
-    margin-bottom: 30px;
-  }
-  
-  h3, p {
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 30px;
-  }
-
-  
-  *, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  *, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  *, *::before, *::after {
-    box-sizing: border-box;
-  }
-  
-  button {
-    border-radius: 0;
-  }
-  
   button:focus {
     outline: 1px dotted;
     outline: 5px auto -webkit-focus-ring-color;
   }
   
-  input, button, select, optgroup, textarea {
+  button {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-  }
-  
-  button, input {
+    border-radius: 0;
     overflow: visible;
-  }
-  
-  button, select {
     text-transform: none;
   }
   
-  button, [type="button"], [type="reset"], [type="submit"] {
+  button, [type="button"]{
     -webkit-appearance: button;
   }
   
-  button:not(:disabled), [type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled) {
+  button:not(:disabled), [type="button"]:not(:disabled){
     cursor: pointer;
   }
-  
-  .btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
+
   
   @media (prefers-reduced-motion: reduce) {
     .btn {
       transition: none;
     }
   }
-  
-  .btn:hover {
-    color: #212529;
-    text-decoration: none;
-  }
-  
-  .btn:focus, .btn.focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  }
-  
-  .btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-  }
-  
-  .btn-primary:hover {
-    color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
-  }
-  
-  .btn-primary:focus, .btn-primary.focus {
-    color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-  }
-  
-  .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #0062cc;
-    border-color: #005cbf;
-  }
-  
-  .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-  }
-  
+
   .text-uppercase {
     text-transform: uppercase !important;
   }
   
-  .fa, .fab, .fad, .fal, .far, .fas {
+  .fas {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     display: inline-block;
@@ -248,17 +85,6 @@
     font-variant: normal;
     text-rendering: auto;
     line-height: 1;
-  }
-  
-  .fa-lightbulb:before {
-    content: "\f0eb";
-  }
-  
-  .far {
-    font-weight: 400;
-  }
-  
-  .fa, .far, .fas {
     font-family: "Font Awesome 5 Free";
   }
   
@@ -287,65 +113,39 @@
     box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
   }
   
-  .btn-primary {
-    color: #fff;
-    background-color: #4285f4 !important;
-  }
-  
-  .btn-primary:hover {
-    color: #fff;
-    background-color: #5a95f5;
-  }
-  
-  .btn-primary:focus, .btn-primary.focus {
-    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-  }
-  
-  .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-    background-color: #0b51c5;
-  }
-  
-  .btn-primary:not([disabled]):not(.disabled):active, .btn-primary:not([disabled]):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-    background-color: #0b51c5 !important;
-    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-  }
-  
-  .btn-primary:not([disabled]):not(.disabled):active:focus, .btn-primary:not([disabled]):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-  }
-  
-  button, html [type="button"], [type="reset"], [type="submit"] {
+  button, html [type="button"]{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
   }
   
-  .counter {
-    position: relative;
-    top: -23px;
-    left: auto;
-    z-index: 2;
-    padding: 2px 8px;
-    margin-left: -23px;
-    font-size: 11px;
-    color: #fff;
-    background-color: #c61118;
-    border-radius: 10em;
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-  }
-  
-  button:focus {
-    outline: 0 !important;
-  }
-  
+  #content {
+    padding-right: var(--bs-gutter-x,.75rem); 
+   padding-left: var(--bs-gutter-x,.75rem);
+}
+.counter {
+   position: relative;
+   top: -23px;
+   left: auto;
+   z-index: 2;
+   padding: 2px 8px;
+   margin-left: -23px;
+   font-size: 11px;
+   color: #fff;
+   background-color: #c61118;
+   border-radius: 10em;
+   -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+ }
+ 
+ button:focus {
+   outline: 0 !important;
+ }
+ 
 .cart-button {
-  padding: unset;
-  background: inherit !important;
-  color: #ffc107;
-  border: unset !important;
-  border-radius: unset;
+ padding: unset;
+ background: inherit !important;
+ color: #ffc107;
+ border: unset !important;
+ border-radius: unset;
 }  
