--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,8 @@
                 <li class="nav-item"><a class="nav-link active" [routerLink]="['/home']">Home</a></li>
                 <li class="nav-item"><a class="nav-link" [routerLink]="['/about']">About</a></li>
                 <li class="nav-item"><a class="nav-link" [routerLink]="['/services']">Services</a></li>
-                <li class="nav-item"><button class="btn btn-primary" (click)="signin()">Sign in</button></li>
+                <li class="nav-item" *ngIf="!loggedIn"><button class="btn btn-primary" (click)="goTo(['/register'])">Sign in</button></li>
+                <li class="nav-item" *ngIf="loggedIn"><button class="btn btn-primary" (click)="goTo(['/user'])">Get Started</button></li>
             </ul>
         </div>
     </div>
