--- a/src/app/pages/user/bet/bet-checkout/bet-checkout.component.html
+++ b/src/app/pages/user/bet/bet-checkout/bet-checkout.component.html
@@ -1,1 +1,35 @@
-<p>bet-checkout works!</p>
+<div class="container">
+    <h1>Bet Checkout</h1>
+
+    <h2>Choices</h2>
+    <div class="row">
+      <div *ngFor="let option of  campaignService.selectedOptions" class="col-3">
+        <div class="card" >
+            <img class="card-img-top" [src]="campaignService.imgbaseUrl + option.img" [alt]="option.name">
+            <div class="card-body">
+              <div class="d-flex justify-space-between">
+                <p class="card-text">{{option.odd}}</p>
+                <i class="fas fa-trash"  style="color: grey;font-size: 20px;"></i>
+              </div>
+
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <h2>Payment Method</h2>
+    <div class="row">
+        <div *ngFor="let option of  campaignService.selectedOptions" class="col-3">
+          <div class="card" >
+              <img class="card-img-top" [src]="campaignService.imgbaseUrl + option.img" [alt]="option.name">
+              <div class="card-body">
+                <div class="d-flex justify-space-between">
+                  <p class="card-text">{{option.odd}}</p>
+                  <i class="fas fa-trash"  style="color: grey;font-size: 20px;"></i>
+                </div>
+  
+              </div>
+            </div>
+        </div>
+    </div>
+  </div>
