--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,5 +1,6 @@
 
 <div class=" row navigation">
+    <div *ngIf=""></div>
     <ul>
         <ng-container *ngFor="let nav of navs">
             <li class="list" [class.active] ="selectedNav === nav.label">
