--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,6 +1,10 @@
 .login-clean {
-    background: #f1f7fc;
     padding: 80px 0;
+    background-image: url('https://images.unsplash.com/photo-1564648351416-3eec9f3e85de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8a29zdGVubG9zZSUyMGJpbGRlcnxlbnwwfHwwfHw%3D&w=1000&q=80') !important;
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat;
+    background: #f1f7fc;
   }
   
   .login-clean form {
@@ -71,16 +75,11 @@
     margin-bottom: 20px;
   }
   
-  .login-clean {
-    background: #f1f7fc;
-    padding: 80px 0;
-  }
-  
   .login-clean form {
     max-width: 320px;
     width: 90%;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: #000000cc;
     padding: 40px;
     border-radius: 4px;
     color: #505e6c;
@@ -132,4 +131,8 @@
     text-decoration: none;
   }
   
+  fieldset {
+    margin: auto;
+    width: 81%;
+  }
     
