--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,10 @@
 <section class="login-clean">
-    <div class="form-group mb-3 text-danger" *ngIf="f.submitted && errorMessage !== ''">{{errorMessage}}</div>
+   
     <form method="post" name="form" (ngSubmit)="login(f)" #f="ngForm" novalidate>
+        <fieldset> <h5>CypherFund Universe</h5></fieldset>
         <h2 class="visually-hidden">Login Form</h2>
         <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
+        <div class="form-group mb-3 text-danger" *ngIf="f.submitted && errorMessage !== ''">{{errorMessage}}</div>
         <div class="form-group mb-3">
             <input 
             class="form-control" 
@@ -22,8 +24,10 @@
             placeholder="Password">
         </div>
         <div class="form-group mb-3">
-            <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Login with phone</label></div>
+            <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1" disabled><label class="form-check-label" for="formCheck-1">Login with phone</label></div>
         </div>
-        <div class="form-group mb-3"><button class="btn btn-primary d-block w-100" type="submit">Log In</button></div><a class="forgot" href="#">Forgot your email or password?</a>
+        <div class="form-group mb-3"><button class="btn btn-primary d-block w-100" type="submit">Log In</button></div>
+        <a class="forgot" [routerLink]="['/register']">Don't yet have an account? Register here.</a> <br>
+        <a class="forgot" href="#">Forgot your email or password?</a>
     </form>
 </section>
