--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,6 +1,10 @@
 .register-photo {
-    background: #f1f7fc;
-    padding: 80px 0;
+  padding: 80px 0;
+  background-image: url('https://images.unsplash.com/photo-1564648351416-3eec9f3e85de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8a29zdGVubG9zZSUyMGJpbGRlcnxlbnwwfHwwfHw%3D&w=1000&q=80') !important;
+  background-size: cover !important;
+  background-position: center !important;
+  background-repeat: no-repeat;
+  background: #f1f7fc;
   }
   
   .register-photo .image-holder {
@@ -21,7 +25,7 @@
   .register-photo form {
     display: table-cell;
     width: 400px;
-    background-color: #ffffff;
+    background-color: #000000cc;
     padding: 40px 60px;
     color: #505e6c;
   }
@@ -83,4 +87,7 @@
     text-decoration: none;
   }
   
-  
+  fieldset {
+    margin: auto;
+    width: 81%;
+  }
