--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,8 +1,8 @@
 <section class="register-photo">
-    <div class="form-group mb-3 text-danger" *ngIf="f.submitted && errorMessage !== ''">{{errorMessage}}</div>
     <div class="form-container">
         <div class="image-holder"></div>
         <form method="post" name="form" (ngSubmit)="register(f)" #f="ngForm" novalidate>
+            <fieldset> <h5>CypherFund Universe</h5></fieldset>
             <h2 class="text-center"><strong>Create</strong> an account.</h2>
             <div class="form-group mb-3">
                 <input 
@@ -72,7 +72,8 @@
                     name="aggree"
                     id="formCheck-1"><label class="form-check-label" for="formCheck-1">I agree to the license terms.</label></div>
             </div>
-            <div class="form-group mb-3"><button class="btn btn-primary d-block w-100" type="submit" [disabled]="!agree.value || !f.valid">Sign Up</button></div><a class="already" [routerLink]="['/login']">You already have an account? Login here.</a>
+            <div class="form-group mb-3"><button class="btn btn-primary d-block w-100" type="submit" [disabled]="!agree.value || !f.valid">Sign Up</button></div>
+            <a class="already" [routerLink]="['/login']">You already have an account? Login here.</a>
         </form>
     </div>
 </section> 
